--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container grap">
         <div class="row">
           <div class="col-md-6">
-              <img class="img-fluid small" src="icon/Logo.png" alt="">
+              <img class="top-logo" src="icon/Logo.png" alt="">
           </div>
           <div class="col-md-6 text">
               <nav class="navbar navbar-expand-lg navbar-light">
@@ -25,17 +25,17 @@
                       <li class="nav-item active">
                       <a class="nav-link" href="#">Books<span class="sr-only">(current)</span></a>
                       </li>
-                      <li class="nav-item">
+                      <li class="nav-item active">
                       <a class="nav-link" href="#">Coures</a>
                       </li>
-                      <li class="nav-item">
+                      <li class="nav-item active">
                       <a class="nav-link" href="#">Others</a>
                       </li>
-                      <li class="nav-item">
-                      <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Blog</a>
+                      <li class="nav-item active">
+                      <a class="nav-link " href="#" tabindex="-1" aria-disabled="true">Blog</a>
                       </li>
                       <li class="nav-item">
-                          <button class="sign">Sign in</button>
+                          <button class="sign-button">Sign in</button>
                       </li>
                   </ul>
                   </div>
@@ -137,7 +137,7 @@
   <h4 class="bold">Testiminial</h4>
   <div class="row">
     <div class="col-md-5">
-      <img class="img-fluid" src="photos/Man.png" alt="">
+      <img class="img-fluid1" src="photos/Man.png" alt="">
     </div>
     <div class="col-md-7">
       <p class="advice">There are many variations of passages of Lorem Ipsum available, but the</p>
@@ -151,11 +151,11 @@
   <div class="container ">
     <div class="row graphic-design">
       <div class="col-md-6">
-        <p class="paragraph">millions of people of all ages and from around <br>the world are improving their lives with us</p>
+        <p class="paragraph">Millions of people of all ages and from around <br>the world are improving their lives with us</p>
       </div>
       <div class="col-md-2">
         <h5>course</h5>
-        <p class="paragraph"> graphic design <br>web design <br>business <br>marketing <br>engineering</p>
+        <p class="paragraph"> Graphic design <br>Web design <br>Business <br>Marketing <br>Engineering</p>
       </div>
       <div class="col-md-2">
         <h5>terms</h5>
