finished tha website

--- a/index.html
+++ b/index.html
@@ -168,8 +168,58 @@
     </div>
       <footer class="align-items-center-1">Copyright © 2020 Programming-hero.com</footer>
   </div>
-  
-</div>
+  </div>
+
+  <div class="container big-hight">
+    <div id="carouselExampleControls" class="carousel slide orange-bg" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+           <div class="row align-items-center">
+            <div class="col-md-7">
+                <h4 class="text-success">graphic design</h4>
+                <P>Build skills with courses, certificates, and degrees online from world-class universities and companies</P>
+                <button class="btn btn-primary">join for free</button>
+            </div>
+            <div class="col-md-5">
+                <img src="Photos/Illustration.png" class="d-block w-100" alt="...">
+            </div>
+           </div>
+          </div>
+          <div class="carousel-item">
+           <div class="row align-items-center">
+               <div class="col-md-7">
+                <h4 class="text-success">Programming-hero</h4>
+                <P>87% of people learning for professional development report career benefits like getting a promotion, a raise, or starting a new career</P>
+                <button class="btn btn-primary">join for free</button>
+               </div>
+               <div class="col-md-5">
+                <img src="Photos/Morder pychons.png" class="d-block w-100" alt="...">
+               </div>
+             </div>
+          </div>
+          <div class="carousel-item">
+           <div class="row align-items-center">
+               <div class="col-md-7">
+                <h4 class="text-success" >language</h4>
+                <P>Earn your bachelor’s or master’s degree online from a leading </P>
+                <button class="btn btn-primary">join for free</button>
+               </div>
+               <div class="col-md-5">
+                <img src="Photos/Morder pyschology.png" class="d-block w-100" alt="...">
+               </div>
+           </div>
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+   </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
