--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container grap">
         <div class="row">
           <div class="col-md-6">
-              <img class="top-logo" src="icon/Logo.png" alt="">
+              <img class="top-logo" src="icon/logo.png" alt="">
           </div>
           <div class="col-md-6 text">
               <nav class="navbar navbar-expand-lg navbar-light">
@@ -57,7 +57,7 @@
             </div>
              </div>
             <div class="col-md-6">
-                <img class="img-fluid" src="photos/Illustration.png" alt="">
+                <img class="img-fluid" src="photos/illustration.png" alt="">
             </div>
         </div>
     </div>
@@ -137,7 +137,7 @@
   <h4 class="bold">Testiminial</h4>
   <div class="row">
     <div class="col-md-5">
-      <img class="img-fluid1" src="photos/Man.png" alt="">
+      <img class="img-fluid1" src="photos/man.png" alt="">
     </div>
     <div class="col-md-7">
       <p class="advice">There are many variations of passages of Lorem Ipsum available, but the</p>
