--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <h6 class="card-title Designation">Modern Psychology</h6>
         <p class="card-text mordern-font"> Designation</p>
         <button class="started">Buy Course</button>
-        <p class="perfect-font"><img class="icon" src="icon/calendar.png" alt="">start20 April,2021     <img class="icon-1" src="icon/people.png" alt="">60 soats</p>
+        <p class="perfect-font"><img class="icon" src="ICON/calendar.png" alt="">start20 April,2021     <img class="icon-1" src="ICON/people.png" alt="">60 soats</p>
       </div>
     </div>
     <div class="card">
@@ -117,7 +117,7 @@
         <h6 class="card-title Designation">Modern Psychology</h6>
         <p class="card-text mordern-font "> Designation</p>
         <button class="started">Buy Course</button>
-        <p class="perfect-font"><img class="icon" src="icon/calendar.png" alt="">start20 April,2021     <img class="icon-1" src="icon/people.png" alt="">60 soats</p>
+        <p class="perfect-font"><img class="icon" src="ICON/calendar.png" alt="">start20 April,2021     <img class="icon-1" src="ICON/people.png" alt="">60 soats</p>
       </div>
     </div>
     <div class="card">
