done the website

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container grap">
         <div class="row">
           <div class="col-md-6">
-              <img class="top-logo" src="ICON/logo.png" alt="">
+              <img class="top-logo" src="ICON/Logo.png" alt="">
           </div>
           <div class="col-md-6 text">
               <nav class="navbar navbar-expand-lg navbar-light">
@@ -57,7 +57,7 @@
             </div>
              </div>
             <div class="col-md-6">
-                <img class="img-fluid" src="Photos/illustration.png" alt="">
+                <img class="img-fluid" src="Photos/Illustration.png" alt="">
             </div>
         </div>
     </div>
@@ -126,7 +126,7 @@
         <h6 class="card-title Designation">Modern Psychology</h6>
         <p class="card-text mordern-font"> Designation</p>
         <button class="started">Buy Course</button>
-        <p class="perfect-font"><img class="icon" src="icon/calendar.png" alt="">start20 April,2021     <img class="icon-1" src="icon/people.png" alt="">60 soats</p>
+        <p class="perfect-font"><img class="icon" src="ICON/calendar.png" alt="">start20 April,2021     <img class="icon-1" src="ICON/people.png" alt="">60 soats</p>
       </div>
     </div>
   </div>
@@ -137,7 +137,7 @@
   <h4 class="bold">Testiminial</h4>
   <div class="row">
     <div class="col-md-5">
-      <img class="img-fluid1" src="Photos/man.png" alt="">
+      <img class="img-fluid1" src="Photos/Man.png" alt="">
     </div>
     <div class="col-md-7">
       <p class="advice">There are many variations of passages of Lorem Ipsum available, but the</p>
